deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 labels:
    app.kubernetes.io/name: group4eks
    app.kubernetes.io/instance: group4eks-instance
    app.kubernetes.io/version: '1.0.0'
    app.kubernetes.io/managed-by: kubectl
 name: group4eks-deployment
spec:
    replicas: 1
    selector:
     matchLabels:
      app: group4eks
    template:
     metadata:
      labels:
       app: group4eks
     spec:
      containers:
          - image: 962804699607.dkr.ecr.us-west-2.amazonaws.com/group4-ecr-repo:latest
            imagePullPolicy: Always
            name: group4eks
            ports:
              - containerPort: 3000
