clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: group4eks-service-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: group4eks
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
