service.yaml
apiVersion: v1
kind: Service
metadata:
 labels:
    app.kubernetes.io/name: group4eks
    app.kubernetes.io/instance: group4eks-instance
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: backend
    app.kubernetes.io/managed-by: kubectl
 name: group4eks
spec:
 selector:
  app: group4eks
 type: LoadBalancer
 ports:
    - protocol: TCP
      port: 80
      targetPort: 80
